add online images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="card">
     <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1751703450/long-boat-docked-on-beach-in-krabi-thailand-summers-royalty-free-image-1622044679_h5yqa7.avif" alt="">
         <h1>Place 2</h1>
         <p>
             my experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -40,7 +40,7 @@
     </div>
     <div class="card">
     <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1735581034/bxm5uzdooctp33qjlbv2.webp" alt="">
         <h1>Place 3</h1>
         <p>
            My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -51,7 +51,7 @@
     </div>
     <div class="card">
     <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1733914227/ctiu6qycxaeinnhlbus6.jpg" alt="">
         <h1>Place 4</h1>
         <p>
             My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -62,7 +62,7 @@
     </div>
     <div class="card">
     <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1731869783/iljoqxpypjz1921ogcsi.jpg" alt="">
         <h1>Place 5</h1>
         <p>
             My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -76,7 +76,7 @@
         <img width="300" height="250" src="sreemangal.webp" alt="">
         <h1>Place 6</h1>
         <p>
-            my experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Aut veritatis, odio enim pariatur quos
         </p>
     </div>
@@ -84,8 +84,30 @@
     </div>
     <div class="card">
     <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
-        <h1>Place 6</h1>
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1729876300/ghkcgm4mxjxdcjulfl1y.jpg" alt="">
+        <h1>Place 7</h1>
+        <p>
+            My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Aut veritatis, odio enim pariatur quos
+        </p>
+    </div>
+    <a href="#"><button class="read-more" >Read more</button></a>
+    </div>
+    <div class="card">
+    <div class="content">
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1727354564/ve9dvmgx8r3akdsat9w9.png" alt="">
+        <h1>Place 8</h1>
+        <p>
+            My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Aut veritatis, odio enim pariatur quos
+        </p>
+    </div>
+    <a href="#"><button class="read-more" >Read more</button></a>
+    </div>
+    <div class="card">
+    <div class="content">
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1726917007/fgzbfznnsl2njquacxex.png" alt="">
+        <h1>Place 9</h1>
         <p>
             my experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Aut veritatis, odio enim pariatur quos
@@ -95,10 +117,10 @@
     </div>
     <div class="card">
     <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
-        <h1>Place 6</h1>
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1726823296/samples/landscapes/nature-mountains.jpg" alt="">
+        <h1>Place 10</h1>
         <p>
-            my experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Aut veritatis, odio enim pariatur quos
         </p>
     </div>
@@ -106,10 +128,10 @@
     </div>
     <div class="card">
     <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
-        <h1>Place 6</h1>
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1726823296/samples/landscapes/beach-boat.jpg" alt="">
+        <h1>Place 11</h1>
         <p>
-            my experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Aut veritatis, odio enim pariatur quos
         </p>
     </div>
@@ -117,32 +139,10 @@
     </div>
     <div class="card">
     <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
+        <img width="300" height="250" src="https://res.cloudinary.com/dx43z0uml/image/upload/v1727344643/w30rnynwulfsklo7o26i.png" alt="">
         <h1>Place 6</h1>
         <p>
-            my experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Aut veritatis, odio enim pariatur quos
-        </p>
-    </div>
-    <a href="#"><button class="read-more" >Read more</button></a>
-    </div>
-    <div class="card">
-    <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
-        <h1>Place 6</h1>
-        <p>
-            my experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Aut veritatis, odio enim pariatur quos
-        </p>
-    </div>
-    <a href="#"><button class="read-more" >Read more</button></a>
-    </div>
-    <div class="card">
-    <div class="content">
-        <img width="300" height="250" src="sreemangal.webp" alt="">
-        <h1>Place 6</h1>
-        <p>
-            my experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            My experiences Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Aut veritatis, odio enim pariatur quos
         </p>
     </div>
